Fix spacing in "Additional notes" section

--- a/css/compat/themes/compat-hub-rtl-318-beta-3.css
+++ b/css/compat/themes/compat-hub-rtl-318-beta-3.css
@@ -11,6 +11,11 @@ body.theme-hub div.woocommerce form.woocommerce-checkout .form-row {
   display: block;
 }
 
+body.theme-hub div.woocommerce .woocommerce-additional-fields {
+  padding-top: 0;
+  margin-bottom: 0;
+}
+
 body.theme-hub div.woocommerce form .form-row .select2-selection--single .select2-selection__rendered {
   padding-right: 0;
 }
